# adaptive-algorithms

./: .gitignore  LICENSE  PlottingClustering.ipynb  PlottingLowRank.ipynb  README.md  adaptive.py  config_interactions.yml  config_iris.yml  datasets.py  energies.py  main.py  plotutil.py  pyproject.toml  requirements.txt  util.py
configs/: interactions.yml  urbansub.yml
data/: README.md
docs/: datasets.md  experiments.md  quickstart.md
examples/: demo.ipynb
figures/: .gitkeep
notebooks/: plotting_clustering.ipynb  plotting_conic_convex.ipynb  plotting_low_rank.ipynb
results/: .gitkeep
scripts/: run_experiment.py
src/adaptive_algorithms/: __init__.py  algorithms.py  datasets.py  energies.py  experiments.py  plotting.py
src/adaptive_sampling/: __init__.py  adaptive.py  energies.py  experiments.py  plotting.py
tests/: test_smoke.py
